fix(frontend): escape apostrophes in JSX/static HTML to satisfy lint rules

--- a/frontend/public/offline.html
+++ b/frontend/public/offline.html
@@ -88,9 +88,9 @@
 <body>
     <div class="container">
         <div class="icon">📱</div>
-        <h1>You're Offline</h1>
+        <h1>You&apos;re Offline</h1>
         <p>
-            Don't worry! Finance Forecast works offline too. 
+            Don&apos;t worry! Finance Forecast works offline too. 
             Your data is safely stored locally and will sync when you're back online.
         </p>
         <button class="button" onclick="window.location.reload()">
